--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,10 @@ services:
       - .env
     environment:
       - DATABASE_URL=mysql://${DB_USER:-nutri_user}:${DB_PASSWORD:-nutri_password}@db:3306/${DB_NAME:-nutrixpert_db}
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME:-nutrixpert_db}
+      - DB_USER=${DB_USER:-nutri_user}
+      - DB_PASSWORD=${DB_PASSWORD:-nutri_password}
       - REDIS_URL=redis://redis:6379/1
     volumes:
       - media_data:/app/media
