Fix: API URL HTTPS config and build errors

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,11 @@ backend/*.txt
 backend/nul
 nul
 
+# Large Files
+*.exe
+docker.tgz
+*.tar.gz
+
 # Security Vault
 _SECURITY_VAULT_/
 *.json_backup
