--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -56,7 +56,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - NEXT_PUBLIC_API_BASE_URL=${BACKEND_URL:-https://srv1354256.hstgr.cloud}/api/v1
+      - NEXT_PUBLIC_API_BASE_URL=https://srv1354256.hstgr.cloud/api/v1
     depends_on:
       - backend
     volumes:
