--- a/nginx.vps.conf
+++ b/nginx.vps.conf
@@ -34,19 +34,20 @@ http {
         root /var/www/html;
         index index.html;
 
-        # Frontend
+        # Next.js Static Files (CSS, JS, Images, Fonts)
+        location ~ ^/_next/static/|^/static/|^/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf)$ {
+            root /var/www/html;
+            expires 365d;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Main Next.js App
         location / {
+            root /var/www/html;
             try_files $uri $uri/ /index.html;
             add_header X-Frame-Options "DENY";
             add_header X-Content-Type-Options "nosniff";
-        }
-
-        # Next.js Assets
-        location /_next/ {
-            root /var/www/html;
-            expires 1y;
-            access_log off;
-            add_header Cache-Control "public, immutable";
         }
 
         # API
