--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -36,31 +36,19 @@ http {
         root /var/www/html;
         index index.html;
 
-        # Next.js Static Assets
-        location /_next/static/ {
-            alias /var/www/html/static/;
+        # Next.js Static Files
+        location ~ ^/_next/static/|^/static/|^/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf)$ {
+            root /var/www/html;
             expires 365d;
-            access_log off;
             add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
         }
 
-        # Public Assets (Logo, Icons, etc)
+        # Main Next.js App
         location / {
-            root /var/www/html/public;
-            try_files $uri @frontend;
+            root /var/www/html;
+            try_files $uri $uri/ /index.html;
             add_header Cache-Control "no-cache";
-        }
-
-        # Frontend Standalone Proxy
-        location @frontend {
-            proxy_pass http://frontend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            add_header X-Frame-Options "DENY";
-            add_header X-Content-Type-Options "nosniff";
         }
 
         # API
