--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -12,7 +12,6 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # HTTP redirect to HTTPS
     server {
         listen 80;
         listen [::]:80;
@@ -20,7 +19,6 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # HTTPS
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -33,27 +31,8 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        root /var/www/html;
-        index index.html;
-
-        # Next.js Static Files
-        location ~ ^/_next/static/|^/static/|^/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf)$ {
-            root /var/www/html;
-            expires 365d;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Main Next.js App
-        location / {
-            root /var/www/html;
-            try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache";
-        }
-
-        # API
         location /api/ {
-            proxy_pass http://backend:8000;
+            proxy_pass http://nutrixpert-backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,16 +40,26 @@ http {
             proxy_read_timeout 90;
         }
 
-        # Django Static
-        location /static/ {
-            alias /var/www/static/;
-            expires 7d;
+        location / {
+            proxy_pass http://nutrixpert-frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_cache_bypass $http_upgrade;
         }
 
-        # Django Media
+        location /static/ {
+            proxy_pass http://nutrixpert-backend:8000;
+            proxy_set_header Host $host;
+        }
+
         location /media/ {
-            alias /var/www/media/;
-            expires 7d;
+            proxy_pass http://nutrixpert-backend:8000;
+            proxy_set_header Host $host;
         }
     }
 }
