feat: configura opencode com 39 agents Nutri 4.0
- Atualiza PLAN_TEMPLATE.md com todos os agents
- Adiciona .ssh e *.pem ao gitignore
- Configura opencode.json com agents customizados
- Copia 39 agents para .opencode/agents/

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,13 @@ frontend/public/fallback-*.js
 frontend/public/sw.js
 frontend/public/workbox-*.js
 
+# SSH Keys - CRÍTICO, NUNCA COMMITAR
+.ssh/
+*.pem
+id_rsa*
+id_ed25519*
+*.key
+
 # IDEs
 
 .idea/
