--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --webpack",
-    "start": "next start",
+    "start": "HOST=0.0.0.0 next start",
     "lint": "eslint",
     "prepare": "husky"
   },
