Fix: CORS, credentials, and API URL for production login

--- a/.env.production
+++ b/.env.production
@@ -14,8 +14,8 @@ DEBUG=False
 BACKEND_URL=http://backend:8000
 FRONTEND_URL=https://srv1354256.hstgr.cloud
 
-# API Base URL for Frontend
-NEXT_PUBLIC_API_BASE_URL=https://srv1354256.hstgr.cloud/api/v1
+# API Base URL for Frontend - Using relative path for production
+NEXT_PUBLIC_API_BASE_URL=/api/v1
 
 # Allowed Hosts
 ALLOWED_HOSTS=srv1354256.hstgr.cloud,localhost
